--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -7,6 +7,6 @@
   "block.mubble.empty_block": "Empty Block",
   "block.mubble.brick_block": "Brick Block",
   "block.mubble.gold_block": "Gold Block",
-  "block.mubble.note_block": "Note Block"
+  "block.mubble.note_block": "Note Block",
   "block.mubble.bumped_block": "Bumped Block"
 }
