--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -7,5 +7,7 @@
   "block.mubble.empty_block": "Empty Block",
   "block.mubble.brick_block": "Brick Block",
   "block.mubble.gold_block": "Gold Block",
-  "block.mubble.snake_block": "Snake Block"
+  "block.mubble.snake_block": "Snake Block",
+  "block.mubble.red_beep_block": "Red Beep Block",
+  "block.mubble.beep_block_frame": "Beep Block Frame"
 }
