Finish Note Block
c

--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -11,5 +11,5 @@
   "block.mubble.bumped_block": "Bumped Block",
   "block.mubble.snake_block": "Snake Block",
   "block.mubble.red_beep_block": "Red Beep Block",
-  "block.mubble.beep_block_frame": "Beep Block Frame"
+  "block.mubble.blue_beep_block": "Blue Beep Block"
 }
