Add Blue Exclamation Block and Change the Beep Block textures

--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -4,6 +4,7 @@
   "item_group.mubble.super_mario": "Super Mario",
 
   "block.mubble.question_block": "? Block",
+  "block.mubble.exclamation_block": "! Block",
   "block.mubble.empty_block": "Empty Block",
   "block.mubble.brick_block": "Brick Block",
   "block.mubble.gold_block": "Gold Block",
