Added item model file and lang for beanstalks

--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -16,6 +16,7 @@
   "block.mubble.slow_snake_block": "Slow Snake Block",
   "block.mubble.red_beep_block": "Red Beep Block",
   "block.mubble.blue_beep_block": "Blue Beep Block",
+  "block.mubble.beanstalk": "Beanstalk",
 
   "item.mubble.cape_feather": "Cape Feather",
   "item.mubble.super_cape_feather": "Super Cape Feather",
