Add custom name and attributes for Goomba variants

--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -31,6 +31,7 @@
   "item.mubble.goomba_spawn_egg": "Goomba Spawn Egg",
 
   "entity.mubble.goomba": "Goomba",
+  "entity.mubble.mini_goomba": "Mini Goomba",
 
   "block.mubble.blue_egg_block": "Blue Egg Block",
   "block.mubble.cyan_egg_block": "Cyan Egg Block",
