--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -29,9 +29,10 @@
   "item.mubble.cape_feather": "Cape Feather",
   "item.mubble.super_cape_feather": "Super Cape Feather",
   "item.mubble.goomba_spawn_egg": "Goomba Spawn Egg",
+  "item.mubble.goomba_spawn_egg.mini": "Mini Goomba Spawn Egg",
 
   "entity.mubble.goomba": "Goomba",
-  "entity.mubble.mini_goomba": "Mini Goomba",
+  "entity.mubble.goomba.mini": "Mini Goomba",
 
   "block.mubble.blue_egg_block": "Blue Egg Block",
   "block.mubble.cyan_egg_block": "Cyan Egg Block",
