--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -57,5 +57,43 @@
   "block.mubble.bumpable.drop.all": "Drop all",
   "block.mubble.bumpable.drop.all.description": "The block will drop the entire item stack when bumped",
   "block.mubble.bumpable.drop.one": "Drop one",
-  "block.mubble.bumpable.drop.one.description": "The block will drop one item per bump"
+  "block.mubble.bumpable.drop.one.description": "The block will drop one item per bump",
+
+  "power_up.mubble.fire": "Fire",
+  "power_up.mubble.ice": "Ice",
+  "power_up.mubble.gold": "Gold",
+  "power_up.mubble.superball": "Superball",
+  "power_up.mubble.cape": "Cape",
+  "power_up.mubble.tanooki": "Tanooki",
+  "power_up.mubble.boomerang": "Boomerang",
+  "power_up.mubble.cloud": "Cloud",
+  "power_up.mubble.mini": "Mini",
+  "power_up.mubble.mega": "Mega",
+  "power_up.mubble.metal": "Metal",
+  "power_up.mubble.bubble": "Bubble",
+  "power_up.mubble.bee": "Bee",
+  "power_up.mubble.boo": "Boo",
+  "power_up.mubble.double": "Double",
+  "power_up.mubble.drill": "Drill",
+  "power_up.mubble.elephant": "Elephant",
+  "power_up.mubble.frog": "Frog",
+  "power_up.mubble.cat": "Cat",
+  "power_up.mubble.hammer": "Hammer",
+  "power_up.mubble.flying_squirrel": "Flying Squirrel",
+  "power_up.mubble.penguin": "Penguin",
+  "power_up.mubble.balloon": "Balloon",
+  "power_up.mubble.propeller": "Propeller",
+  "power_up.mubble.rock": "Rock",
+  "power_up.mubble.spring": "Spring",
+  "power_up.mubble.builder": "Builder",
+  "power_up.mubble.invicible": "Invicible",
+  "power_up.mubble.vanish": "Vanish",
+  "power_up.mubble.weird": "Weird",
+
+  "commands.mubble.power_up.set.success": "Changed %s's power-up",
+  "commands.mubble.power_up.set.success_named": "Changed %s's power-up to %s",
+  "commands.mubble.power_up.set.unchanged": "Nothing changed. The player already has this power-up",
+  "commands.mubble.power_up.remove.success": "Successfully removed the power-up from %s",
+  "commands.mubble.power_up.remove.success_named": "Successfully removed the %s's %s power-up",
+  "commands.mubble.power_up.remove.no_power_up": "Nothing changed. The player doesn't have any power-up to remove"
 }
