--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -6,6 +6,38 @@
 
   "item.mubble.maker_glove": "Maker Glove",
 
+  "item.mubble.super_mushroom": "Super Mushroom",
+  "item.mubble.mini_mushroom": "Mini Mushroom",
+  "item.mubble.mega_mushroom": "Mega Mushroom",
+  "item.mubble.bee_mushroom": "Bee Mushroom",
+  "item.mubble.boo_mushroom": "Boo Mushroom",
+  "item.mubble.spring_mushroom": "Spring Mushroom",
+  "item.mubble.propeller_mushroom": "Propeller Mushroom",
+  "item.mubble.rock_mushroom": "Rock Mushroom",
+  "item.mubble.weird_mushroom": "Weird Mushroom",
+  "item.mubble.drill_mushroom": "Drill Mushroom",
+  "item.mubble.fire_flower": "Fire Flower",
+  "item.mubble.ice_flower": "Ice Flower",
+  "item.mubble.gold_flower": "Gold Flower",
+  "item.mubble.superball_flower": "Superball Flower",
+  "item.mubble.cloud_flower": "Cloud Flower",
+  "item.mubble.boomerang_flower": "Boomerang Flower",
+  "item.mubble.bubble_flower": "Bubble Flower",
+  "item.mubble.elephant_fruit": "Elephant Fruit",
+  "item.mubble.frog_suit": "Frog Suit",
+  "item.mubble.hammer_suit": "Hammer Suit",
+  "item.mubble.penguin_suit": "Penguin Suit",
+  "item.mubble.super_leaf": "Super Leaf",
+  "item.mubble.super_acorn": "Super Acorn",
+  "item.mubble.super_bell": "Super Bell",
+  "item.mubble.super_hammer": "Super Hammer",
+  "item.mubble.super_star": "Super Star",
+  "item.mubble.metal_cap": "Metal Cap",
+  "item.mubble.vanish_cap": "Vanish Cap",
+  "item.mubble.cape_feather": "Cape Feather",
+  "item.mubble.power_balloon": "Power Balloon",
+  "item.mubble.double_cherry": "Double Cherry",
+
   "block.mubble.question_block": "? Block",
   "block.mubble.blue_exclamation_block": "Blue ! Block",
   "block.mubble.green_exclamation_block": "Green ! Block",
@@ -26,7 +58,6 @@
   "block.mubble.red_beep_block": "Red Beep Block",
   "block.mubble.blue_beep_block": "Blue Beep Block",
 
-  "item.mubble.cape_feather": "Cape Feather",
   "item.mubble.super_cape_feather": "Super Cape Feather",
   "item.mubble.goomba_spawn_egg": "Goomba Spawn Egg",
   "item.mubble.goomba_spawn_egg.mini": "Mini Goomba Spawn Egg",
@@ -61,14 +92,14 @@
 
   "power_up.mubble.fire": "Fire",
   "power_up.mubble.ice": "Ice",
+  "power_up.mubble.mini": "Mini",
+  "power_up.mubble.mega": "Mega",
   "power_up.mubble.gold": "Gold",
   "power_up.mubble.superball": "Superball",
   "power_up.mubble.cape": "Cape",
   "power_up.mubble.tanooki": "Tanooki",
   "power_up.mubble.boomerang": "Boomerang",
   "power_up.mubble.cloud": "Cloud",
-  "power_up.mubble.mini": "Mini",
-  "power_up.mubble.mega": "Mega",
   "power_up.mubble.metal": "Metal",
   "power_up.mubble.bubble": "Bubble",
   "power_up.mubble.bee": "Bee",
@@ -86,9 +117,9 @@
   "power_up.mubble.rock": "Rock",
   "power_up.mubble.spring": "Spring",
   "power_up.mubble.builder": "Builder",
-  "power_up.mubble.invicible": "Invicible",
   "power_up.mubble.vanish": "Vanish",
   "power_up.mubble.weird": "Weird",
+  "power_up.mubble.invicible": "Invicible",
 
   "commands.mubble.power_up.set.success": "Changed %s's power-up",
   "commands.mubble.power_up.set.success_named": "Changed %s's power-up to %s",
